# UCSB_GANER_Capstone_2023-2024

./: .gitmodules  README.md  lidarTest.py  mpu6050_pry.py
capstone_camera/: camera.py
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/drive_control/: InputState.h  OutputState.h
src/CapstoneCodeV1/: Arm_Class.py  Arm_Class_js.py  Control_Options_Keyboard.py  Control_Options_Terminal.py  Control_Options_autonomous.py  Control_Options_blue.py  Control_Options_v2.py  Controller.py  HC-SR04_setup.py  HC_SR04_setup.py  Inverse_kinematic.py  Latch_Detect.py  Motor.py  Motor_DTLever.py  RobotMain_Autonomous.py  RobotMain_Controller.py  RobotMain_Keyboard.py  RobotMain_Terminal.py  RobotMain_blue.py  YOLO_test.py  arm_debug.py  proximity_sensor.py  test_arm.py  turn_signal.py  ultrasonic_sensor_setup.py
src/camera/: CMakeLists.txt  package.xml  setup.py
src/distance_sensor/: CMakeLists.txt  package.xml
src/drive_control/: CMakeLists.txt  package.xml
src/drive_control/include/drive_control/: arm.py  encoder.py  motor.py
src/drive_control/launch/: drive_control.launch  drive_test.launch  teleop_drive_test.launch  test_drive_control.launch
src/drive_control/src/: arm_control  encoder_read  enconder_read  motor_control  motor_control.py  motor_control_test.py
src/read_i2c/: CMakeLists.txt  package.xml
src/robot_control/: CMakeLists.txt  package.xml
src/robot_launch/: GANER.launch  GANR.launch  package.xml  params.launch  teleop_test.launch  test.launch
src/tasks/: CMakeLists.txt  package.xml
test/: lidarTest.py
(+91 files in other folders)
